<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogBox"
    >

    <ImageView
        android:id="@+id/bgpop"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="214dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/bgpop"
        android:src="@drawable/pop_bg" />

    <ImageView
        android:id="@+id/accept"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="251dp"
        android:layout_marginLeft="251dp"
        android:layout_marginTop="377dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:layout_marginBottom="309dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/accept"
        android:src="@drawable/accpethdpi" />

    <ImageView
        android:id="@+id/cancel"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="113dp"
        android:layout_marginLeft="113dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="253dp"
        android:layout_marginRight="253dp"
        android:layout_marginBottom="308dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/cancel"
        android:src="@drawable/cancelhdpi" />

    <ImageView
        android:id="@+id/textBarang"
        android:layout_width="259dp"
        android:layout_height="36dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="319dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="375dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/textBarang"
        android:src="@drawable/barangsudahditerimahdpi" />

</RelativeLayout>
